# dimis

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: dimis.yaml
configs/model/: dimis.yaml
scripts/: slurm_eval.sh  slurm_train.sh
src/: eval.py  train.py
src/data/: base_datamodule.py  oasis_datamodule.py  upenngbm_datamodule.py
src/data/components/: custom_torchio.py  dataloader.py  transforms.py
src/models/: dimis_module.py
src/models/components/: mlp.py  perceiverio.py  resmlp.py  transformer_encoder.py
src/utils/: loss.py  math.py
tests/: test_datamodules.py
