[build-system]
requires = ["setuptools ~= 72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimis"
version = "1.0.0"
authors = [
    {name = "Reza Eghbali", email="eghbali@uw.edu"},
    {name = "Erik Goesche", email="erik.goesche@fau.de"}
]
description = "Domain Influence in MRI Medical Image Segmentation."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    'click ~= 8.1.0',
    'einops ~= 0.8.0',
    'hydra-core ~= 1.3.0',
    'hydra-colorlog ~= 1.2.0',
    'hydra-optuna-sweeper ~= 1.2.0',
    'lightning ~= 2.4.0',
    'opencv-python ~= 4.10.0',
    'rootutils ~= 1.0.0',
    'tensorboard ~= 2.17.0',
    'torch ~= 2.2.0',
    'torchio ~= 0.19.0',
    'torchmetrics ~= 1.4.0',
    'torchvision ~= 0.19.0'
]

[project.optional-dependencies]
docs = ["sphinx", "furo"]

[tool.setuptools]
py-modules = ["dimis"]

[project.scripts]
kseg = "dimis.main:main"